<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootPersonalGet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/educational_details"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/educational_details"
        android:src="@drawable/ic_education" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <EditText
            android:id="@+id/input_university"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/university"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <EditText
            android:id="@+id/input_degree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/degree"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <EditText
            android:id="@+id/input_location_univ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/start_year" />

    <Spinner
        android:id="@+id/start_year_education"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:prompt="@string/start_year" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/end_year" />

    <Spinner
        android:id="@+id/end_year_education"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:prompt="@string/end_year" />


    <TextView
        android:id="@+id/addEducation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="6dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/add_education" />

    <Button
        android:id="@+id/saveProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@color/colorPrimary"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/save_changes" />

</LinearLayout>
