<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage">

    <RelativeLayout
        android:id="@+id/pr"
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/profile_pic"
            android:src="@drawable/ic_account" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_marginTop="110dp"
            android:text="@string/name"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_marginTop="140dp"
            android:text="@string/e_mail"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <android.support.design.widget.TabLayout
        android:layout_below="@id/pr"
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#172d44"
        app:tabIndicatorColor="#18FFFF"
        app:tabSelectedTextColor="#cfcfcf"
        app:tabTextColor="#ffffff" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_below="@id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/logout"
        android:text="@string/log_out"
        android:layout_width="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="6dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        tools:ignore="RelativeOverlap" />
</RelativeLayout>