<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="6dp"
    tools:context=".ViewDetails.Personal">

    <LinearLayout
        android:id="@+id/display_personal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:drawablePadding="7dp"
            android:padding="8dp" />

        <TextView
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:drawablePadding="7dp"
            android:padding="8dp" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:drawablePadding="7dp"
            android:padding="8dp" />

        <TextView
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:drawablePadding="7dp"
            android:padding="8dp" />

        <TextView
            android:id="@+id/skill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:drawablePadding="7dp"
            android:padding="8dp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/edit_personal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/ename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/name"
            android:padding="8dp" />

        <EditText
            android:id="@+id/emobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/mobile"
            android:padding="8dp" />

        <EditText
            android:id="@+id/elocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/location"
            android:padding="8dp" />

        <EditText
            android:id="@+id/elink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/link"
            android:padding="8dp" />


        <EditText
            android:id="@+id/eskill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/skills"
            android:padding="8dp" />

        <Button
            android:id="@+id/apply_personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:text="@string/save_changes" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/edit_personal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="18dp"
        android:src="@drawable/ic_edit" />

</RelativeLayout>