<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="6dp">

    <ScrollView
        android:id="@+id/display_education"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/degree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawablePadding="7dp"
                android:padding="8dp" />

            <TextView
                android:id="@+id/organisation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:drawablePadding="7dp"
                android:padding="8dp" />

            <TextView
                android:id="@+id/education_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:drawablePadding="7dp"
                android:padding="8dp" />

            <TextView
                android:id="@+id/startyear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:drawablePadding="7dp"
                android:padding="8dp" />

            <TextView
                android:id="@+id/endyear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:drawablePadding="7dp"
                android:padding="8dp" />


            <ImageView
                android:id="@+id/certificate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp" />
        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:id="@+id/edit_education"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <EditText
                android:id="@+id/eduorganisation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/university"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <EditText
                android:id="@+id/edudegree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/degree"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <EditText
                android:id="@+id/edulocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/start_year" />

            <Spinner
                android:id="@+id/estartyear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:prompt="@string/start_year" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/end_year" />

            <Spinner
                android:id="@+id/eendyear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:prompt="@string/end_year" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="6dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textStyle="bold"
            android:text="@string/add_certificate"
            android:id="@+id/ecertificate"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/apply_education"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:text="@string/save_changes" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/edit_education_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="18dp"
        android:src="@drawable/ic_edit" />

</RelativeLayout>